# contract-fox

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pr.md
.github/workflows/: ci.yml
.soroban/config/: config.toml
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs
contracts/withdrawal/: Cargo.toml
contracts/withdrawal/src/: lib.rs
docs/: DEPLOY.md  TOKEN_SETUP.md
scripts/: deploy.sh
sdk/: Cargo.toml
sdk/src/: lib.rs  types.rs  utils.rs
src/: errors.rs  main.rs
src/config/: mod.rs
src/friendbot/: mod.rs
src/friendbot/config/: mod.rs  test_helpers.rs  tests.rs
src/friendbot/utils/: friendbot.rs  mod.rs  tests.rs  types.rs
src/horizon/: client.rs  mod.rs
src/setup/: mod.rs  token_setup.rs
src/soroban/: rpc_client.rs
src/utils/: keypair.rs  mod.rs
tools/: keygen.rs
worker/: Cargo.toml
worker/src/: lib.rs  logging.rs  main.rs  redaction.rs
