[workspace]
resolver = "2"

members = [
    "contracts/donation",
    "contracts/withdrawal",
    "contracts/campaign",
    "sdk",
    "worker",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"
reqwest  = { version = "0.12", features = ["json"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }